# lucid

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  .mlx_test.py  .pre-commit-config.yaml  .py  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.kr.md  README.md  _extension.py  _test.py  _vit_t.txt  autodiff.md  bench_fusion_sweep.py  benchmark_lenet.py  compare_pt_lucid.py  conf.py  index.rst  lenet5.lcd  loc.json  loc_badge.json  mypy.ini  pyproject.toml  pytest.ini  setup.py  test.py  train_lenet_mnist.py
lucid/_C/: CMakeLists.txt  __init__.py  api.h  engine.pyi  version.cpp  version.h
lucid/_C/autograd/: AccumulateGrad.cpp  AccumulateGrad.h  AutogradNode.h  CustomFunction.cpp  CustomFunction.h  Engine.cpp  Engine.h  FuncOp.h  FusionPass.cpp  FusionPass.h  Helpers.cpp  Helpers.h  ModuleHookNode.cpp  ModuleHookNode.h  Node.cpp  Node.h
lucid/_C/backend/: BackendInit.cpp  Dispatcher.h  IBackend.h
lucid/_C/backend/cpu/: Blas.cpp  Blas.h  CpuBackend.h  Im2Col.cpp  Im2Col.h  Lapack.cpp  Lapack.h  Norm.cpp  Norm.h  Pool.cpp  Pool.h  Reduce.cpp  Reduce.h  Shape.cpp  Shape.h  Vdsp.cpp  Vdsp.h  Vforce.cpp  Vforce.h
lucid/_C/backend/gpu/: GpuBackend.h  MetalAllocator.h  MetalAllocator.mm  MetalKernelRunner.h  MetalKernelRunner.mm  MlxBridge.cpp  MlxBridge.h
lucid/_C/bindings/: BindingGen.h  bind.cpp  bind_amp.cpp  bind_autograd.cpp  bind_bfunc.cpp  bind_compile.cpp  bind_complex.cpp  bind_composite.cpp  bind_einops.cpp  bind_errors.cpp  bind_fft.cpp  bind_gfunc.cpp  bind_linalg.cpp  bind_nn.cpp  bind_op_registry.cpp  bind_optim.cpp  bind_profiler.cpp  bind_quantized.cpp  bind_random.cpp  bind_tensor.cpp  bind_tokenizer.cpp  bind_ufunc.cpp  bind_utils.cpp
lucid/_C/compile/: CompiledExecutable.h  CompiledExecutable.mm  ExecutableCache.cpp  ExecutableCache.h  MpsBuilder.h  MpsBuilder.mm  TraceIR.h  Tracer.cpp  Tracer.h
lucid/_C/compile/OpEmitters/: OpEmitter.cpp  OpEmitter.h  _AttrHelpers.h
lucid/_C/compile/VjpEmitters/: VjpEmitter.h  VjpEmitter.mm  _VjpHelpers.h
lucid/_C/core/: Allocator.cpp  Allocator.h  AmpPolicy.cpp  AmpPolicy.h  Determinism.cpp  Determinism.h  Device.h  Dtype.h  Error.cpp  Error.h  ErrorBuilder.cpp  ErrorBuilder.h  Exceptions.cpp  Exceptions.h  Generator.cpp  Generator.h  GradMode.cpp  GradMode.h  Helpers.h  MemoryStats.cpp  MemoryStats.h  OpRegistry.cpp  OpRegistry.h  OpSchema.h  Profiler.cpp  Profiler.h  Result.h  SchemaGuard.cpp  SchemaGuard.h  Scope.h  Shape.h  Storage.h  TensorImpl.cpp  TensorImpl.h  TensorMeta.h  Validate.cpp  Validate.h  fwd.h
lucid/_C/kernel/: AutogradNode.h  BinaryKernel.h  Contig.h  IKernel.h  NaryKernel.h  ReduceKernel.h  UnaryKernel.h  VariadicKernel.h
lucid/_C/kernel/primitives/: BatchedMatmul.h  BroadcastReduce.h  Gather.h  Im2Col.h  Primitives.h  Scatter.h
lucid/_C/nn/: AdaptivePool.cpp  AdaptivePool.h  Attention.cpp  Attention.h  BatchNorm.cpp  BatchNorm.h  CTCLoss.cpp  CTCLoss.h  ConvNd.cpp  ConvNd.h  ConvTransposeNd.cpp  ConvTransposeNd.h  Dropout.cpp  Dropout.h  Embedding.cpp  Embedding.h  EmbeddingBag.cpp  EmbeddingBag.h  Fold.cpp  Fold.h  GroupNorm.cpp  GroupNorm.h  Interpolate.cpp  Interpolate.h  LSTM.cpp  LSTM.h  LayerNorm.cpp  LayerNorm.h  Linear.cpp  Linear.h  Loss.cpp  Loss.h  NormExt.cpp  NormExt.h  PoolNd.cpp  PoolNd.h  RMSNorm.cpp  RMSNorm.h  Spatial.cpp  Spatial.h  (+2 more)
lucid/_C/ops/: _TEMPLATE.h
lucid/_C/ops/bfunc/: Add.cpp  Add.h  Bitwise.cpp  Bitwise.h  Compare.cpp  Compare.h  Div.cpp  Div.h  Dot.cpp  Dot.h  Floordiv.cpp  Floordiv.h  Inner.cpp  Inner.h  Inplace.cpp  Inplace.h  Matmul.cpp  Matmul.h  Maximum.cpp  Maximum.h  Minimum.cpp  Minimum.h  Mul.cpp  Mul.h  Outer.cpp  Outer.h  Pow.cpp  Pow.h  Sub.cpp  Sub.h  Tensordot.cpp  Tensordot.h  _BinaryOp.h  _Broadcast.h  _Detail.h
lucid/_C/ops/complex/: Complex.cpp  Complex.h  Conj.cpp  Conj.h  Imag.cpp  Imag.h  Real.cpp  Real.h  _Detail.h
lucid/_C/ops/composite/: Indexing.cpp  Indexing.h  Layout.cpp  Layout.h  Logical.cpp  Logical.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Reductions.cpp  Reductions.h  Search.cpp  Search.h  Stats.cpp  Stats.h
lucid/_C/ops/einops/: Einops.h  Einsum.cpp  Rearrange.cpp  Reduce.cpp  Repeat.cpp  _Pattern.h
lucid/_C/ops/fft/: Fftn.cpp  Fftn.h  Ifftn.cpp  Ifftn.h  Irfftn.cpp  Irfftn.h  Rfftn.cpp  Rfftn.h  _Detail.h
lucid/_C/ops/gfunc/: Gfunc.cpp  Gfunc.h
lucid/_C/ops/linalg/: Cholesky.cpp  Cholesky.h  Det.cpp  Det.h  Eig.cpp  Eig.h  Eigh.cpp  Eigh.h  HouseholderProduct.cpp  HouseholderProduct.h  Inv.cpp  Inv.h  LDLFactor.cpp  LDLFactor.h  LUFactor.cpp  LUFactor.h  LUSolve.cpp  LUSolve.h  Lstsq.cpp  Lstsq.h  MatrixPower.cpp  MatrixPower.h  Norm.cpp  Norm.h  Pinv.cpp  Pinv.h  QR.cpp  QR.h  SVD.cpp  SVD.h  Solve.cpp  Solve.h  SolveTriangular.cpp  SolveTriangular.h  _Detail.h
lucid/_C/ops/quantized/: QuantizedMatmul.cpp  QuantizedMatmul.h
lucid/_C/ops/ufunc/: Activation.cpp  Activation.h  Arith.cpp  Arith.h  Astype.cpp  Astype.h  CubeRoot.cpp  CubeRoot.h  Discrete.cpp  Discrete.h  Exponential.cpp  Exponential.h  Hyperbolic.cpp  Hyperbolic.h  Inplace.cpp  Inplace.h  Predicate.cpp  Predicate.h  Reductions.cpp  Reductions.h  ScalarParam.cpp  ScalarParam.h  Scan.cpp  Scan.h  Softmax.cpp  Softmax.h  Trace.cpp  Trace.h  Transpose.cpp  Transpose.h  Trig.cpp  Trig.h  UnaryGpu.cpp  Var.cpp  Var.h  _Detail.h  _ReduceOp.h  _UnaryOp.h
lucid/_C/ops/utils/: Concat.cpp  Concat.h  Contiguous.cpp  Contiguous.h  Flip.cpp  Flip.h  Histogram.cpp  Histogram.h  Layout.cpp  Layout.h  MaskedSelect.cpp  MaskedSelect.h  Meshgrid.cpp  Meshgrid.h  Nextafter.cpp  Nextafter.h  Pad.cpp  Pad.h  Repeat.cpp  Repeat.h  Select.cpp  Select.h  Sort.cpp  Sort.h  Tri.cpp  Tri.h  View.cpp  View.h  _Detail.h
lucid/_C/optim/: Ada.cpp  Ada.h  Adam.cpp  Adam.h  LRScheduler.cpp  LRScheduler.h  Optimizer.cpp  Optimizer.h  Prop.cpp  Prop.h  SGD.cpp  SGD.h  _OptimDetail.h
lucid/_C/random/: Random.cpp  Random.h
lucid/_C/tensor/: AutogradMeta.h  TensorMeta.h
lucid/_C/test/: CMakeLists.txt  cmake_test_discovery_34e61b15ea.json
lucid/_C/tokenizers/: base.cpp  bindings.cpp  core.pyi  tokenizers.hpp  wordpiece.cpp
(+2737 files in other folders)
