[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    # Pinned to 3.0.x: pybind11's stub-introspection rendering (numeric
    # param unions, parameterized tuple returns) varies across minors, which
    # silently drifted the committed engine.pyi between dev and CI.  gen_pyi
    # normalizes those, but pinning keeps the generated stub reproducible.
    "pybind11>=3.0,<3.1",
    "cmake>=3.24",
    "ninja>=1.11",
    # setup.py imports mlx at build time to detect Metal sources, so it
    # must be available in the isolated build environment.
    # 0.31 is the first release that ships native macOS 26 wheels
    # (mlx-0.31.x-...-macosx_26_0_arm64.whl + mlx-metal split package),
    # matching our MACOSX_DEPLOYMENT_TARGET=26.0 build target.
    "mlx>=0.31; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
build-backend = "setuptools.build_meta"

[project]
name = "lucid-dl"
version = "3.5.1"
description = "Apple Silicon ML framework"
readme = "README.md"
license = "MIT"
authors = [{ name = "ChanLumerico", email = "greensox284@gmail.com" }]
# Lucid relies on PEP 649 lazy annotations (Python 3.14) to make
# TYPE_CHECKING-only imports work in `|`-union annotations without
# string-quoting (H7) or `from __future__ import annotations` (H1).
# 3.12/3.13 would raise NameError on every such annotation at import
# time, so we declare 3.14 as the minimum supported version.
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: GPU",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    # Note: SPDX `license = "MIT"` above replaces the legacy
    # `License :: OSI Approved :: MIT License` classifier (PEP 639).
]

# Lucid's *code* stays numpy-free: the C++ engine is a standalone binary and no
# compute path imports numpy (Hard Rule H4 — the engine still runs without it).
# numpy is nonetheless bundled as a runtime dependency so a plain
# ``pip install lucid-dl`` gives a new user the full training + interop
# experience out of the box: it backs the user-facing bridge surface
# (``tensor(np_arr)`` / ``.numpy()`` / ``from_numpy`` / DLPack), bf16/complex
# tensor construction, portable optimizer-state checkpoints, and DataLoader
# array ingest.  (safetensors stays optional — it gates only the
# ``.safetensors`` format + pretrained-weight download; see [models] below.)
#
# MLX *is* a hard runtime dep — engine.so links against libmlx.dylib and the
# CMake RPATH is baked in at build time. Mirror it in [build-system].requires
# and use `pip install --no-build-isolation` so the build-env path matches
# the runtime path.
dependencies = [
    "mlx>=0.31; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/ChanLumerico/lucid"
Documentation = "https://chanlumerico.github.io/lucid/"
Changelog = "https://github.com/ChanLumerico/lucid/blob/main/CHANGELOG.md"
Issues = "https://github.com/ChanLumerico/lucid/issues"

[project.optional-dependencies]
# numpy is now a hard runtime dependency; this extra is kept as a no-op alias
# so existing ``pip install lucid-dl[numpy]`` commands keep working.
numpy = ["numpy>=1.24"]
# Everything needed to load pretrained weights / the ``.safetensors`` format
# (numpy is already in the base deps).  ``pip install lucid-dl[models]``.
models = ["safetensors>=0.4"]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "mypy>=1.8",
    "numpy>=1.24",
]
test = [
    "pytest>=7",
    "pytest-benchmark>=4",
    "numpy>=1.24",
    # Used by models serialization round-trip tests.
    "safetensors>=0.4",
    # The reference framework is *intentionally* not declared here —
    # parity tests use a lazy import and skip cleanly when missing.
    # Install it separately when running parity / perf comparisons.
]
docs = [
    # Sphinx 9.x has a circular-import regression with Python 3.14.
    # Pin to 8.x until the upstream fix lands.
    "sphinx>=7.4,<9",
    "sphinx-autobuild>=2024.4",
    "pydata-sphinx-theme>=0.15",
    "breathe>=4.35",
    "exhale>=0.3.7",
    "myst-parser>=3.0,<5",
    "sphinx-design>=0.6",
    "sphinxcontrib-mermaid>=0.9",
    "sphinx-copybutton>=0.5",
    "sphinx-notfound-page>=1.0",
]

[tool.setuptools.packages.find]
# Only ship the `lucid` package tree itself — dev tooling (`tools/`,
# `scripts/`, `web/`, `obsidian/`, `benchmarks/`) and the test tier
# (`lucid.test*`) must never end up in the published wheel. Without
# `include` the default discovery walks the whole repo root and pulls
# in `web/node_modules/...` via the `*.py` files inside katex, plus
# every script under `tools/`.
where = ["."]
include = ["lucid*"]
exclude = ["lucid.test*", "lucid.benchmarks*"]

[tool.setuptools.package-data]
# py.typed: PEP 561 marker — required for type checkers (mypy / pyright)
#           to recognise lucid as a typed package.
# *.pyi:    type stubs for the C++ engine + dynamically-bound Tensor /
#           top-level surfaces. Hand-written modules pick up inline
#           annotations directly; stubs only exist where introspection
#           can't see signatures (C extensions, registry-injected methods).
# *.json:   model + weight registry payloads loaded at import time.
lucid = ["py.typed", "*.pyi", "**/*.pyi", "**/*.json"]

[tool.pytest.ini_options]
testpaths = ["lucid/test"]
markers = [
    "parity:    numerical parity vs reference framework (auto-skip when missing)",
    "smoke:     quick sanity test (< 1s)",
    "slow:      end-to-end, > 5s (model forwards, training loops)",
    "heavy:     very large model (> 100M params); skip unless -m heavy is passed",
    "gpu:       requires Apple Silicon GPU (Metal); auto-skip otherwise",
    "perf:      pytest-benchmark timing test (opt-in via --benchmark-only)",
    "stability: numerical-edge / extreme-value coverage (inf / nan / subnormal)",
    "f64_only:  float64-only path; skipped when only f32 is available",
]
addopts = "-v --tb=short -m 'not heavy'"

# ── Ruff ────────────────────────────────────────────────────────────
# Project lint gate (paired with mypy --strict). Intent: catch real
# bugs (unused vars, undefined names, dead imports) without flagging
# the math / lazy-import / closure-capture patterns the codebase
# uses on purpose.
[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["build", ".venv", "obsidian", "**/*.pyi"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line length — formatter / reviewer's call, not gate
    "E731",  # lambda assignments — used for closure capture (compile, math)
    "E741",  # ambiguous names (l, I, O) — linear-algebra convention
    "E402",  # late module imports — circular-dep, hot-path, conditional patterns
]

[tool.ruff.lint.per-file-ignores]
# Re-export / bootstrap ordering in package roots.
"**/__init__.py"  = ["F401", "E402"]
"**/__init__.pyi" = ["F401", "E402"]
